style.css
*,
*::before,
*::after
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

html, body
{
    background-color: #04040f;
    color: #ddd;
    width: 100%;
    height: 100%;
}

body
{
    display: grid;
    place-items: center;
    overflow-x: hidden;
}

.noselect 
{
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.piano
{
    background: #0e0e25;
    padding: 1rem 1.5rem 2.5rem 1.5rem;
    border-radius: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    box-shadow: 0 1rem 0 hsl(240, 45%, 20%);
}

.options
{
    top: 1em;
    display: flex;
    align-items: stretch;
    justify-content: flex-start;
    padding-bottom: 1rem;
    gap: 2em;
    width: 100%;
    flex-wrap: wrap;
}

.options label
{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    gap: 1em;
    width: max-content;
}

/* .options select
{
    background-color: transparent;
    color: inherit;
    font-size: 1.5rem;
} */

.options *:not(span)
{
    font-size: max(1.2vw, 0.9rem);
}

.options input[type="number"]
{
    width: 6rem;
    background-color: transparent;
    border: 1px solid blue;
    outline: none;
    color: inherit;
    text-shadow: 0 0 0.5rem #fff7;
    border-radius: 0.2em;
    padding: 0.5rem;
}

.options .wave-type select
{
    padding: 0.5em;
    border-radius: 0.2em;
}

.options .record button
{
    display: block;
    border: 0.1rem solid blue;
    background: none;
    color: inherit;
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    cursor: pointer;
}

.options .record button:where(:hover,:focus-visible)
{
    background-color: blue;
}

/* .options .octave-count input[type="number"]
{
} */

.options .octave-offset input[type="range"]
{
    width: calc(256 * 0.1em);
    max-width: 200px;
}

.options .octave-offset input[type="number"]
{
    width: 100%;
}

.piano-keyboard
{
    display: flex;
    align-items: flex-start;
    font-size: min(3rem, 10vmin);
    margin-top: 2rem;
}

.piano-keyboard .octave
{
    display: flex;
    align-items: flex-start;
    opacity: 0;
    transform: translateY(-100%);
    animation: enter 0.5s ease-out forwards;
    animation-play-state: paused;
}

@keyframes enter
{
    to
    {
        transform: translateY(0);
        opacity: 1;
    }
}

.key
{
    --key-width: min(1.5em, calc(90vw / var(--octave-count) / 7));
    --key-height: calc(var(--key-width) * 4);
    --shadow-lightness: 50%;
    --start-shadow-size: calc(var(--key-height) / 15);
    --shadow-size: var(--start-shadow-size);
    --inset-shadow-size: 0;
    
    width: var(--key-width);
    height: var(--key-height);
    background-color: #fff;
    border: 1px solid #cacaca;
    border-radius: 0 0 calc(var(--key-width) / 8) calc(var(--key-width) / 8);
    box-shadow: 0 var(--shadow-size) 0 hsl(0, 0%, var(--shadow-lightness)),
                0 0 var(--inset-shadow-size) #0007 inset;
    transition: 0.2s;
    position: relative;
    top: 0;
}

.key.small
{
    --small-key-width: calc(var(--key-width) / 2);
    --small-key-height: calc(var(--key-height) / 1.6);
    --small-key-offset: calc(var(--small-key-height) / 10);
    --shadow-lightness: 20%;
    --start-shadow-size: calc(var(--small-key-height) / 15);

    background-color: #000;
    width: var(--small-key-width);
    height: var(--small-key-height);
    border: 1px solid #666;
    margin-inline: calc(var(--small-key-width) / 2 * -1);
    top: calc(var(--small-key-offset) * -1);
    z-index: 1;
}

.key.active
{
    --shadow-size: 0em;
    --inset-shadow-size: 0.5em;
    top: calc(var(--start-shadow-size));
}

.key.small.active
{
    top: calc(var(--start-shadow-size) - var(--small-key-offset));
}

